objects/Account.object
<CustomObject><fields>
        <fullName>Current_Member__c</fullName>
        <description>Indicates if the organization is a current member or not</description>
        <formula>if( Member_End_Date__c &gt; TODAY(), "Yes", "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Member?</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Donor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates who the Donor Contact is for this Organization</inlineHelpText>
        <label>Donor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Donor Contact)</relationshipLabel>
        <relationshipName>Organizations2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>First_Donation_Date__c</fullName>
        <inlineHelpText>Calculates the date of the last donation</inlineHelpText>
        <label>First Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization Donation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Last_Donation_Date__c</fullName>
        <inlineHelpText>Calculates the date of the last donation</inlineHelpText>
        <label>Last Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization Donation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Latest_Membership_Type_Code__c</fullName>
        <description>Field created to translate Member Type from string to number  because the website has issues retrieving string.</description>
        <formula>Case( Membership_Type__c , 
"Sustaining", 1,
"Corporate", 2,
"Government/Public Agency", 3, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Membership Type Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Latest_Membership_Type__c</fullName>
        <description>Field automatically populated by trigger. Displays the latest membership type whether the organization is currently member or not. This field should not be displayed instead see Current Membership Type field.</description>
        <label>Latest Membership Type</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Member_End_Date__c</fullName>
        <label>Member End Date</label>
        <summarizedField>Opportunity.Membership_End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organizational Membership</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Membership_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates who the Membership Contact is for this Organization</inlineHelpText>
        <label>Membership Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Membership Contact)</relationshipLabel>
        <relationshipName>Organizations1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Membership_Type__c</fullName>
        <formula>if( Current_Member__c = 'Yes',  Latest_Membership_Type__c ,'')</formula>
        <inlineHelpText>If the Organization is a current member, this field displays the membership type</inlineHelpText>
        <label>Membership Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Parent_Current_Member__c</fullName>
        <formula>If( Parent.Current_Member__c ="Yes", "Yes", "No")</formula>
        <label>Parent Current Member?</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Parent_Membership_Type__c</fullName>
        <formula>Parent.Membership_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the parent organization is a current member, displays the membership type</inlineHelpText>
        <label>Parent Membership Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates who the Primary Contact is for this Organization</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both Vertical &amp; Horizontal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roofing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer - Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer - Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer - Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer - Structural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel Fabrication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas &amp; Chemical Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer - Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information &amp; Technology &amp; Project Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>TempText__c</fullName>
        <description>Used to prevent recursive looping</description>
        <label>TempText</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Total_Donated__c</fullName>
        <inlineHelpText>Calculates the lifetime donated amount</inlineHelpText>
        <label>Total Donated</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization Donation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Update_Donor_Contact__c</fullName>
        <label>Update Donor Contact</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Update_Membership_Contact__c</fullName>
        <label>Update Membership Contact</label>
        <length>5</length>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AllOrganizations</fullName>
        <filterScope>Everything</filterScope>
        <label>All Organizations</label>
    </listViews><listViews>
        <fullName>Member_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Membership_Contact__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Member__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Member Organizations</label>
    </listViews><listViews>
        <fullName>MyOrganizations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Organizations</label>
    </listViews><listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><recordTypes>
        <fullName>Individual</fullName>
        <active>false</active>
        <label>Individual</label>
    </recordTypes></CustomObject>